Batch of ios layout fixes
- content being squished when mobile menu is opened
- cookies button with webkit default styles
- mobile menu icon don's showing up when page first load

--- a/assets/stylesheets/components/_cookie-consent.scss
+++ b/assets/stylesheets/components/_cookie-consent.scss
@@ -8,6 +8,10 @@
 	background-color: transparent;
 
 	border: 0;
+
+	-webkit-appearance: none; //sass-lint:disable-line no-vendor-prefixes
+	   -moz-appearance: none; //sass-lint:disable-line no-vendor-prefixes indentation
+	        appearance: normal; //sass-lint:disable-line indentation
 }
 
 .cc-theme-classic .cc-btn {
